deploy/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - seriousben.com
    secretName: seriousben-com-tls
  rules:
  - host: seriousben.com
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: 80
---
